8263459: Add better support for restricted methods
Reviewed-by: mcimadamore